--- a/front/package.json
+++ b/front/package.json
@@ -6,6 +6,7 @@
     "esbuild": "^0.19.5"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.1",
     "jotai": "^2.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
