--- a/front/package.json
+++ b/front/package.json
@@ -9,6 +9,7 @@
     "@emotion/react": "^11.11.1",
     "jotai": "^2.5.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.18.0"
   }
 }
