--- a/front/package.json
+++ b/front/package.json
@@ -8,6 +8,7 @@
   "dependencies": {
     "@emotion/react": "^11.11.1",
     "@emotion/styled": "^11.11.0",
+    "filesize": "^10.1.0",
     "jotai": "^2.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
